samples/_failures_safe/1761329999_b1bf52_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_467c2078.c: In function ‘main’:
./samples/SAFE/__tmp_467c2078.c:138:5: error: expected declaration or statement at end of input
  138 |     }
      |     ^
